  ServerUtilTest added
  RemoteServer refactorings
  EntityDefinition.isRowColoring field removed
  EntityDefinition.isRowColoring() renamed to hasBackgroundColorProvider(), renaming bubbled all the way up
  QueryLoadTestModel improved
  EntityDbRemoteTest added
  EntityModel.stActive moved to it's logical home, EntityEditPanel
  EntityTableColumnModel removed along with default implementation
  EntityEditModel insert/update/delete now return the affected entities/keys
  EntityUiUtil.NewRecordAction renamed to NewEntityAction, now uses a single EntityEditPanel instead of a whole EntityPanel
  LoginPanel.addInitialFocusHack() moved to UiUtil, action parameter added
  EntityPanelProvider.createInstance() renamed to createPanel()
  EntityPanelProvider.createEditPanel() and createTablePanel() added
  Minor improvements, mostly javadoc errors
  LoadTestModel, nanoTime() used for measurements
  MethodLogger, nanotime() used for measurements
  EntityCriteriaUtil.PropertyCriteria refactored
  EntityTableModel.isMultipleUpdateAllowed() renamed to isBatchUpdateAllowed()
  EntityTableModel.getAllowDeleteState() renamed to getDeleteAllowedState()
  JasperReportsWrapper now only holds the report path and loads the actual report object only when requried, and caches it
  Entity.FormattedValueProvider removed
  Entity.BackgroundColorProvider.getBackgroundColor() added Property parameter
  EntityTableCellRenderer uses the above to set the background color of individual cells
  EntityTableModel.getColumnProperty() moved to FilteredTableModel, renamed to getColumnIdentifier()
  Entities.getEntityIdSource() renamed to getIdValueSource()
  EntityTableModel.getRowBackgroundColor() renamed to getPropertyBackgroundColor()
  H2Database.DATABASE_INIT_SCRIPT and DATABASE_IN_MEMORY added
  H2Database, embedded in memory implemented
  Entity.DerivedValueProvider removed
  Property.DerivedProperty.Provider added (too deep?)
  EnitityValidator is now Entity.Validator